[package]
name = "axum-prod-course"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version="1.47.1" , features=["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11"
string = "0.3.1"
lazy-regex = "3.4.1"
async-trait = "0.1.89"
strum_macros = "0.27.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
serde_with = "3.15.1"

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
