[package]
name = "axum-prod-course"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version="1.47.1" , features=["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
lazy-regex = "3.4.1"
async-trait = "0.1.89"
strum_macros = "0.27.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
serde_with = "3.15.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
serial_test = "3.2.0"
rand = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
time = "0.3.44"

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
